updated bin and  files to run